Application works as proxy.

--- a/DeviceGateway/DeviceGateway.csproj
+++ b/DeviceGateway/DeviceGateway.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Microsoft.AspNetCore.Proxy\Microsoft.AspNetCore.Proxy.csproj" />
+  </ItemGroup>
+
 </Project>
